--- a/paper/references.bib
+++ b/paper/references.bib
@@ -42,6 +42,15 @@
   publisher={ACM New York, NY, USA}
 }
 
+@Book{citeGG,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+
 @Misc{rstanarm,
     title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
     author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
@@ -70,5 +79,51 @@
     pages = {1686},
     doi = {10.21105/joss.01686},
   }  
-  
-  
+
+@misc{businessinsider,
+    author = "{Markets Insider}",
+    title = "{Silver Price}",
+    howpublished = "\url{https://markets.businessinsider.com/commodities/silver-price}",
+    year = "2024",
+    note = "[Accessed: April 4, 2023]"
+}
+
+@misc{businessinsider,
+    author = "{Markets Insider}",
+    title = "{Gold Price}",
+    howpublished = "\url{https://markets.businessinsider.com/commodities/gold-price}",
+    year = "2024",
+    note = "[Accessed: April 4, 2023]"
+}
+
+@misc{businessinsider,
+    author = "{Markets Insider}",
+    title = "{Gold Price}",
+    howpublished = "\url{https://markets.businessinsider.com/commodities/gold-price}",
+    year = "2024",
+    note = "[Accessed: April 4, 2023]"
+}
+
+@misc{yahoofinance,
+    author = "{yahoo! finance}",
+    title = "{Ethereum USD}",
+    howpublished = "\url{https://finance.yahoo.com/quote/ETH-USD/history}",
+    year = "2024",
+    note = "[Accessed: April 4, 2023]"
+}
+
+@misc{yahoofinance,
+    author = "{yahoo! finance}",
+    title = "{Bitcoin USD}",
+    howpublished = "\url{https://finance.yahoo.com/quote/BTC-USD/history}",
+    year = "2024",
+    note = "[Accessed: April 4, 2023]"
+}
+
+@misc{Investopedia,
+    author = "{Mary Hall}",
+    title = "{Enter Profitable Territory With Average True Range}",
+    howpublished = "\url{https://www.investopedia.com/articles/trading/08/atr.asp}",
+    year = "2024",
+    note = "[Accessed: April 8, 2023]"
+}
