--- a/paper/references.bib
+++ b/paper/references.bib
@@ -10,7 +10,7 @@
   }
   
   
-@Article{thereferencecanbewhatever,
+@Article{citetidy,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -58,16 +58,14 @@
     year = {2022},
     url = {https://mc-stan.org/rstanarm/},
   }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
+
+@Manual{citeHere,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
     year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
   }
-  
   
 @Article{rohan,
     title = {Welcome to the {tidyverse}},
@@ -80,7 +78,7 @@
     doi = {10.21105/joss.01686},
   }  
 
-@misc{businessinsider,
+@misc{silverbusinessinsider,
     author = "{Markets Insider}",
     title = "{Silver Price}",
     howpublished = "\url{https://markets.businessinsider.com/commodities/silver-price}",
@@ -88,7 +86,7 @@
     note = "[Accessed: April 4, 2023]"
 }
 
-@misc{businessinsider,
+@misc{goldbusinessinsider,
     author = "{Markets Insider}",
     title = "{Gold Price}",
     howpublished = "\url{https://markets.businessinsider.com/commodities/gold-price}",
@@ -96,15 +94,8 @@
     note = "[Accessed: April 4, 2023]"
 }
 
-@misc{businessinsider,
-    author = "{Markets Insider}",
-    title = "{Gold Price}",
-    howpublished = "\url{https://markets.businessinsider.com/commodities/gold-price}",
-    year = "2024",
-    note = "[Accessed: April 4, 2023]"
-}
 
-@misc{yahoofinance,
+@misc{ethyahoofinance,
     author = "{yahoo! finance}",
     title = "{Ethereum USD}",
     howpublished = "\url{https://finance.yahoo.com/quote/ETH-USD/history}",
@@ -112,7 +103,7 @@
     note = "[Accessed: April 4, 2023]"
 }
 
-@misc{yahoofinance,
+@misc{btcyahoofinance,
     author = "{yahoo! finance}",
     title = "{Bitcoin USD}",
     howpublished = "\url{https://finance.yahoo.com/quote/BTC-USD/history}",
@@ -120,10 +111,28 @@
     note = "[Accessed: April 4, 2023]"
 }
 
-@misc{Investopedia,
+@misc{InvestopediaATR,
     author = "{Mary Hall}",
     title = "{Enter Profitable Territory With Average True Range}",
     howpublished = "\url{https://www.investopedia.com/articles/trading/08/atr.asp}",
     year = "2024",
     note = "[Accessed: April 8, 2023]"
 }
+
+@misc{InvestopediaMetals,
+    author = "{Michael Bromerg}",
+    title = "{Why Has Gold Always Been Valuable?}",
+    howpublished = "\url{https://www.investopedia.com/articles/investing/071114/why-gold-has-always-had-value.asp#:~:text=Beginning%20with%20ancient%20civilization%2C%20from,jewelry%2C%20and%20as%20other%20artifacts.}",
+    year = "2023",
+    note = "[Accessed: April 12, 2023]"
+}
+
+@misc{InvestopediaFormula,
+    author = "{Adam Hayes}",
+    title = "{Average True Range (ATR) Formula, What It Means, and How to Use It}",
+    howpublished = "\url{https://www.investopedia.com/terms/a/atr.asp}",
+    year = "2023",
+    note = "[Accessed: April 12, 2023]"
+}
+
+
