--- a/paper/references.bib
+++ b/paper/references.bib
@@ -135,4 +135,13 @@
     note = "[Accessed: April 12, 2023]"
 }
 
+@misc{Forbes,
+    author = "{Brian Domitrovic}",
+    title = "{Gold Has Been An Excellent Barometer In The 2000s}",
+    howpublished = "\url{https://www.forbes.com/sites/briandomitrovic/2023/12/09/gold-has-been-an-excellent-barometer-in-the-2000s/?sh=383131b74443}",
+    year = "2023",
+    note = "[Accessed: April 15, 2023]"
+}
+
+
 
